develop: fixes but still doesn't work very well
