# src/app/api/v1/games/[gameId]/turns/route.ts
@@ -1,20 +1,58 @@
-import { NextRequest, NextResponse } from 'next/server';
-import { NewTurn, ChosenCharacterAction } from '@/server/types/rest/api.alias.types';
+import {NextRequest, NextResponse} from 'next/server';
+import {NewTurn} from '@/server/types/rest/api.alias.types';
 import {GameService} from "@/server/services/game.service";
 import {getGameServiceInstance} from "@/global";
 
-// POST /api/v1/games/{gameId}/turns - Submit a new turn for the game
+// POST /api/v1/games/{gameId}/turns - Create a new turn for the game
 export async function POST(
+  _: NextRequest,
+  { params }: { params: Promise<{ gameId: string }> }
+): Promise<Response>  {
+  try {
+    const { gameId } = await params;
+    console.debug(`POST /api/v1/games/${gameId}/turns - Create a new turn for the game`)
+
+    if (!gameId) {
+      return Response.json(
+          {error: `Missing param gameId: ${gameId}`},
+          {status: 400})
+    }
+    
+    // Check if the game exists
+    const gameService: GameService = getGameServiceInstance()
+    const game = await gameService.getGame(gameId);
+    
+    if (!game) {
+      return NextResponse.json(
+        { status: 404, message: `Game with ID '${gameId}' not found` },
+        { status: 404 }
+      );
+    }
+
+    await gameService.createTurn(gameId);
+    return NextResponse.json("", { status: 202 });
+
+  } catch (error) {
+    console.error('Error creating turn:', error);
+    return NextResponse.json(
+      { status: 500, message: 'Internal server error occurred while processing the request' },
+      { status: 500 }
+    );
+  }
+}
+
+// PUT /api/v1/games/{gameId}/turns - Submit a turn for the game
+export async function PUT(
   request: NextRequest,
   { params }: { params: Promise<{ gameId: string }> }
 ): Promise<Response>  {
   try {
     const { gameId } = await params;
-    console.debug(`POST /api/v1/games/${gameId}/turns - Submit a turn for the game`)
+    console.debug(`PUT /api/v1/games/${gameId}/turns - Submit a turn for the game`)
 
     if (!gameId) {
       return Response.json(
-          {error: `Missing param gamedId: ${gameId}`},
+          {error: `Missing param gameId: ${gameId}`},
           {status: 400})
     }
 
@@ -37,23 +75,7 @@ export async function POST(
       );
     }
 
-    // Convert character names to character IDs
-    const nameToIdMap = new Map<string, string>();
-    game.characters.forEach(char => {
-      nameToIdMap.set(char.name, char.characterId);
-    });
-
-    const convertedCharacterActions: ChosenCharacterAction[] = body.characterActions
-      .map(action => ({
-          characterId: nameToIdMap.get(action.characterName),
-          characterName: action.characterName,
-          chosenOption: action.chosenOption
-        }));
-            
-    await gameService.submitTurn(gameId, {
-      ...body,
-      characterActions: convertedCharacterActions
-    });
+    await gameService.submitTurn(gameId, body);
     return NextResponse.json("", { status: 202 });
 
   } catch (error) {
